--- a/index.html
+++ b/index.html
@@ -163,10 +163,10 @@
       </div>
       <h3 class="title">Freya</h3>
       <div class="social-media">
-        <img src="/assets/001-facebook.png" alt="" />
-        <img src="/assets/002-twitter.png" alt="" />
-        <img src="/assets/003-instagram.png" alt="" />
-        <img src="/assets/004-messenger.png" alt="" />
+        <img src="/assets/001-facebook.png" alt="" width="50px" />
+        <img src="/assets/002-twitter.png" alt="" width="50px" />
+        <img src="/assets/003-instagram.png" alt="" width="50px" />
+        <img src="/assets/004-messenger.png" alt="" width="50px" />
       </div>
     </footer>
 
