--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Freya</title>
+
+    <!-- FONT AWESOME CDN -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+    />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -43,9 +49,10 @@
       </section>
 
       <!-- MENU -->
-      <section class="inpressive-starter">
+      <section class="impressive-starter">
         <p>Impressive starter</p>
         <h3>Fresh & Delicious</h3>
+        <hr />
         <div class="menu">
           <div class="row">
             <div class="menu-col">
@@ -134,15 +141,15 @@
             aspernatur dolor repellendus quisquam
           </p>
           <div class="phone">
-            <img src="/assets/phone-call.png" alt="phone number" />
+            <i class="fa-solid fa-mobile-screen"></i>
             <p>+123456789</p>
           </div>
           <div class="address">
-            <img src="/assets/placeholder-3.png" alt="" />
+            <i class="fa-solid fa-location-dot"></i>
             <p>Hudson 193, New York</p>
           </div>
           <div class="email">
-            <img src="/assets/mail.png" alt="" />
+            <i class="fa-solid fa-envelope"></i>
             <p>info@freya.com</p>
           </div>
         </div>
