--- a/index.html
+++ b/index.html
@@ -121,12 +121,11 @@
 
       <!--TODAY CHOICE-->
       <section class="today-choice">
-        <div class="today-chefs-choice">
+        <div class="chefs-choice">
           <h3>Today Chef's Choice</h3>
           <h4>Chicken salad with pomegranate</h4>
           <p>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Distinctio
-            aliquam itaque tempore eius
           </p>
           <a href="#">View more</a>
         </div>
@@ -134,41 +133,45 @@
 
       <!-- CONTACT -->
       <section class="contact">
-        <div class="contact-us">
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis
-            laboriosam autem explicabo eum incidunt vel quaerat ab, accusamus
-            aspernatur dolor repellendus quisquam
-          </p>
-          <div class="phone">
-            <i class="fa-solid fa-mobile-screen"></i>
-            <p>+123456789</p>
-          </div>
-          <div class="address">
-            <i class="fa-solid fa-location-dot"></i>
-            <p>Hudson 193, New York</p>
-          </div>
-          <div class="email">
-            <i class="fa-solid fa-envelope"></i>
-            <p>info@freya.com</p>
-          </div>
-        </div>
-        <div class="send-email">
-          <form action="" class="formgroup">
-            <input type="text" placeholder="Enter Name" />
-            <input type="text" placeholder="Enter Email" />
-            <textarea rows="5" placeholder="Type your message"></textarea>
-            <input type="submit" value="Send message" />
-          </form>
+        <div>
+          <div class="contact-us">
+            <h2>Contact Us</h2>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              Reiciendis laboriosam autem explicabo eum incidunt vel quaerat ab,
+              accusamus aspernatur dolor repellendus quisquam
+            </p>
+            <div class="address">
+              <div class="phone">
+                <i class="fa-solid fa-mobile-screen"></i>
+                <p>+123456789</p>
+              </div>
+              <div class="location">
+                <i class="fa-solid fa-location-dot"></i>
+                <p>Hudson 193, New York</p>
+              </div>
+              <div class="email">
+                <i class="fa-solid fa-envelope"></i>
+                <p>info@freya.com</p>
+              </div>
+            </div>
+            <div class="send-email">
+              <form action="" class="form-group">
+                <input type="text" placeholder="Enter Name" />
+                <input type="text" placeholder="Enter Email" />
+                <textarea rows="5" placeholder="Type your message"></textarea>
+                <input type="submit" value="Send message" />
+              </form>
+            </div>
         </div>
       </section>
     </main>
 
     <footer>
       <div class="copy">
-        <p>Copyright 2023 - Freya</p>
+        <p>&copy; Copyright 2023 - Freya</p>
       </div>
-      <h3 class="title">Freya</h3>
+      <h3 class="title"><a href="index.html">Freya</a></h3>
       <div class="social-media">
         <img src="/assets/001-facebook.png" alt="" width="50px" />
         <img src="/assets/002-twitter.png" alt="" width="50px" />
