--- a/index.html
+++ b/index.html
@@ -173,10 +173,10 @@
       </div>
       <h3 class="title"><a href="index.html">Freya</a></h3>
       <div class="social-media">
-        <img src="/assets/001-facebook.png" alt="" width="50px" />
-        <img src="/assets/002-twitter.png" alt="" width="50px" />
-        <img src="/assets/003-instagram.png" alt="" width="50px" />
-        <img src="/assets/004-messenger.png" alt="" width="50px" />
+        <i class="fa-brands fa-facebook-f"></i>
+        <i class="fa-brands fa-twitter"></i>
+        <i class="fa-brands fa-instagram"></i>
+        <i class="fa-brands fa-google-plus-g"></i>
       </div>
     </footer>
 
