--- a/index.html
+++ b/index.html
@@ -168,6 +168,7 @@
     </main>
 
     <footer>
+      <div class="footer">
       <div class="copy">
         <p>&copy; Copyright 2023 - Freya</p>
       </div>
@@ -178,6 +179,11 @@
         <i class="fa-brands fa-instagram"></i>
         <i class="fa-brands fa-google-plus-g"></i>
       </div>
+      </div>
+    </div>
+    <div class="madeby">
+      <p>Made by <strong>@Marcel Sadio Mara</strong></p>
+    </div>
     </footer>
 
     <!-- JS SCRIPT -->
