--- a/index.html
+++ b/index.html
@@ -44,8 +44,10 @@
 
     <main>
       <section class="make-a-reservation">
-        <p>Delicious stars right here. Enjoy the real food</p>
-        <a href="#">Make a reservation</a>
+        <div>
+          <p>Delicious stars right here. Enjoy the real food</p>
+          <a href="#">Make a reservation</a>
+        </div>
       </section>
 
       <!-- MENU -->
@@ -121,13 +123,16 @@
 
       <!--TODAY CHOICE-->
       <section class="today-choice">
-        <div class="chefs-choice">
-          <h3>Today Chef's Choice</h3>
-          <h4>Chicken salad with pomegranate</h4>
-          <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Distinctio
-          </p>
-          <a href="#">View more</a>
+        <div>
+          <div class="chefs-choice">
+            <h3>Today Chef's Choice</h3>
+            <h4>Chicken salad with pomegranate</h4>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+              Distinctio
+            </p>
+            <a href="#">View more</a>
+          </div>
         </div>
       </section>
 
@@ -155,36 +160,36 @@
                 <p>info@freya.com</p>
               </div>
             </div>
-            <div class="send-email">
-              <form action="" class="form-group">
-                <input type="text" placeholder="Enter Name" />
-                <input type="text" placeholder="Enter Email" />
-                <textarea rows="5" placeholder="Type your message"></textarea>
-                <input type="submit" value="Send message" />
-              </form>
-            </div>
+          </div>
+          <div class="send-email">
+            <form action="" class="form-group">
+              <input type="text" placeholder="Enter Name" />
+              <input type="text" placeholder="Enter Email" />
+              <textarea rows="5" placeholder="Type your message"></textarea>
+              <input type="submit" value="Send message" />
+            </form>
+          </div>
         </div>
       </section>
     </main>
 
     <footer>
       <div class="footer">
-      <div class="copy">
-        <p>&copy; Copyright 2023 - Freya</p>
+        <div class="copy">
+          <p>&copy; Copyright 2023 - Freya</p>
+        </div>
+        <h3 class="title"><a href="index.html">Freya</a></h3>
+        <div class="social-media">
+          <i class="fa-brands fa-facebook-f"></i>
+          <i class="fa-brands fa-twitter"></i>
+          <i class="fa-brands fa-instagram"></i>
+          <i class="fa-brands fa-google-plus-g"></i>
+        </div>
       </div>
-      <h3 class="title"><a href="index.html">Freya</a></h3>
-      <div class="social-media">
-        <i class="fa-brands fa-facebook-f"></i>
-        <i class="fa-brands fa-twitter"></i>
-        <i class="fa-brands fa-instagram"></i>
-        <i class="fa-brands fa-google-plus-g"></i>
-      </div>
-      </div>
-    </div>
+    </footer>
     <div class="madeby">
       <p>Made by <strong>@Marcel Sadio Mara</strong></p>
     </div>
-    </footer>
 
     <!-- JS SCRIPT -->
     <script src="script.js"></script>
