--- a/index.html
+++ b/index.html
@@ -1,197 +1,197 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Freya</title>
 
-    <!-- FONT AWESOME CDN -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
-    />
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <header>
-      <nav>
-        <h3 class="title"><a href="index.html">Freya</a></h3>
-        <div class="navlinks">
-          <ul>
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#">Menu</a></li>
-            <li><a href="#">Pages</a></li>
-            <li><a href="#">News</a></li>
-            <li><a href="#">Features</a></li>
-            <li><a href="#">Book A Table</a></li>
-          </ul>
-        </div>
-        <div class="menu">
-          <img src="assets/bars.png" id="menuBtn" />
-        </div>
-      </nav>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Freya</title>
 
-      <div class="hero">
-        <h1>Art of Chef</h1>
-        <p>The best restaurant in town</p>
-        <div class="buttons">
-          <a href="#">View Menu</a>
-          <a href="#">Book Now</a>
-        </div>
+  <!-- FONT AWESOME CDN -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" />
+  <link rel="stylesheet" href="style.css" />
+</head>
+
+<body>
+  <header>
+    <nav>
+      <h3 class="title"><a href="index.html">Freya</a></h3>
+      <div class="navlinks">
+        <ul>
+          <li class="active"><a href="#">Home</a></li>
+          <li><a href="#">Menu</a></li>
+          <li><a href="#">Pages</a></li>
+          <li><a href="#">News</a></li>
+          <li><a href="#">Features</a></li>
+          <li><a href="#">Book A Table</a></li>
+        </ul>
       </div>
-    </header>
-
-    <main>
-      <section class="make-a-reservation">
-        <div>
-          <p>Delicious stars right here. Enjoy the real food</p>
-          <a href="#">Make a reservation</a>
-        </div>
-      </section>
-
-      <!-- MENU -->
-      <section class="impressive-starter">
-        <p>Impressive starter</p>
-        <h3>Fresh & Delicious</h3>
-        <hr />
-        <div class="menu">
-          <div class="row">
-            <div class="menu-col">
-              <img src="assets/fish fillet.jpg" alt="fish fillet" />
-              <div class="about">
-                <h4 class="title">Fish fillet</h4>
-                <p class="desc">
-                  Bonbon bear clasw biscuit donut tart eat cake.
-                </p>
-              </div>
-              <h4 class="price">$34</h4>
-            </div>
-            <div class="menu-col">
-              <img src="assets/pasta.jpg" alt="pasta" />
-              <div class="about">
-                <h4 class="title">Pasta</h4>
-                <p class="desc">
-                  Bonbon bear clasw biscuit donut tart eat cake.
-                </p>
-              </div>
-              <h4 class="price">$18</h4>
-            </div>
-            <div class="menu-col">
-              <img src="assets/spaghetti.jpg" alt="spaghetti" />
-              <div class="about">
-                <h4 class="title">Spaghetti</h4>
-                <p class="desc">
-                  Bonbon bear clasw biscuit donut tart eat cake.
-                </p>
-              </div>
-              <h4 class="price">$47</h4>
-            </div>
-            <div class="menu-col">
-              <img src="assets/white pasta.jpg" alt="" />
-              <div class="about">
-                <h4 class="title">White Pasta</h4>
-                <p class="desc">
-                  Bonbon bear clasw biscuit donut tart eat cake.
-                </p>
-              </div>
-              <h4 class="price">$29</h4>
-            </div>
-            <div class="menu-col">
-              <img src="assets/fish fillet.jpg" alt="" />
-              <div class="about">
-                <h4 class="title">Fish</h4>
-                <p class="desc">
-                  Bonbon bear clasw biscuit donut tart eat cake.
-                </p>
-              </div>
-              <h4 class="price">$34</h4>
-            </div>
-            <div class="menu-col">
-              <img src="assets/spaghetti.jpg" alt="" />
-              <div class="about">
-                <h4 class="title">Burger</h4>
-                <p class="desc">
-                  Bonbon bear clasw biscuit donut tart eat cake.
-                </p>
-              </div>
-              <h4 class="price">$8</h4>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <!--TODAY CHOICE-->
-      <section class="today-choice">
-        <div>
-          <div class="chefs-choice">
-            <h3>Today Chef's Choice</h3>
-            <h4>Chicken salad with pomegranate</h4>
-            <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-              Distinctio
-            </p>
-            <a href="#">View more</a>
-          </div>
-        </div>
-      </section>
-
-      <!-- CONTACT -->
-      <section class="contact">
-        <div>
-          <div class="contact-us">
-            <h2>Contact Us</h2>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-              Reiciendis laboriosam autem explicabo eum incidunt vel quaerat ab,
-              accusamus aspernatur dolor repellendus quisquam
-            </p>
-            <div class="address">
-              <div class="phone">
-                <i class="fa-solid fa-mobile-screen"></i>
-                <p>+123456789</p>
-              </div>
-              <div class="location">
-                <i class="fa-solid fa-location-dot"></i>
-                <p>Hudson 193, New York</p>
-              </div>
-              <div class="email">
-                <i class="fa-solid fa-envelope"></i>
-                <p>info@freya.com</p>
-              </div>
-            </div>
-          </div>
-          <div class="send-email">
-            <form action="" class="form-group">
-              <input type="text" placeholder="Enter Name" />
-              <input type="text" placeholder="Enter Email" />
-              <textarea rows="5" placeholder="Type your message"></textarea>
-              <input type="submit" value="Send message" />
-            </form>
-          </div>
-        </div>
-      </section>
-    </main>
-
-    <footer>
-      <div class="footer">
-        <div class="copy">
-          <p>&copy; Copyright 2023 - Freya</p>
-        </div>
-        <h3 class="title"><a href="index.html">Freya</a></h3>
-        <div class="social-media">
-          <i class="fa-brands fa-facebook-f"></i>
-          <i class="fa-brands fa-twitter"></i>
-          <i class="fa-brands fa-instagram"></i>
-          <i class="fa-brands fa-google-plus-g"></i>
-        </div>
+      <div class="menu">
+        <img src="assets/bars.png" id="menuBtn" />
       </div>
-    </footer>
-    <div class="madeby">
-      <p>Made by <strong>@Marcel Sadio Mara</strong></p>
+    </nav>
+
+    <div class="hero">
+      <h1>Art of Chef</h1>
+      <p>The best restaurant in town</p>
+      <div class="buttons">
+        <a href="#">View Menu</a>
+        <a href="#">Book Now</a>
+      </div>
     </div>
+  </header>
 
-    <!-- JS SCRIPT -->
-    <script src="script.js"></script>
-  </body>
+  <main>
+    <section class="make-a-reservation">
+      <div>
+        <p>Delicious stars right here. Enjoy the real food</p>
+        <a href="#">Make a reservation</a>
+      </div>
+    </section>
+
+    <!-- MENU -->
+    <section class="impressive-starter">
+      <p>Impressive starter</p>
+      <h3>Fresh & Delicious</h3>
+      <hr />
+      <div class="menu">
+        <div class="row">
+          <div class="menu-col">
+            <img src="assets/fish fillet.jpg" alt="fish fillet" />
+            <div class="about">
+              <h4 class="title">Fish fillet</h4>
+              <p class="desc">
+                Bonbon bear clasw biscuit donut tart eat cake.
+              </p>
+            </div>
+            <h4 class="price">$34</h4>
+          </div>
+          <div class="menu-col">
+            <img src="assets/pasta.jpg" alt="pasta" />
+            <div class="about">
+              <h4 class="title">Pasta</h4>
+              <p class="desc">
+                Bonbon bear clasw biscuit donut tart eat cake.
+              </p>
+            </div>
+            <h4 class="price">$18</h4>
+          </div>
+          <div class="menu-col">
+            <img src="assets/spaghetti.jpg" alt="spaghetti" />
+            <div class="about">
+              <h4 class="title">Spaghetti</h4>
+              <p class="desc">
+                Bonbon bear clasw biscuit donut tart eat cake.
+              </p>
+            </div>
+            <h4 class="price">$47</h4>
+          </div>
+          <div class="menu-col">
+            <img src="assets/white pasta.jpg" alt="" />
+            <div class="about">
+              <h4 class="title">White Pasta</h4>
+              <p class="desc">
+                Bonbon bear clasw biscuit donut tart eat cake.
+              </p>
+            </div>
+            <h4 class="price">$29</h4>
+          </div>
+          <div class="menu-col">
+            <img src="assets/fish fillet.jpg" alt="" />
+            <div class="about">
+              <h4 class="title">Fish</h4>
+              <p class="desc">
+                Bonbon bear clasw biscuit donut tart eat cake.
+              </p>
+            </div>
+            <h4 class="price">$34</h4>
+          </div>
+          <div class="menu-col">
+            <img src="assets/spaghetti.jpg" alt="" />
+            <div class="about">
+              <h4 class="title">Burger</h4>
+              <p class="desc">
+                Bonbon bear clasw biscuit donut tart eat cake.
+              </p>
+            </div>
+            <h4 class="price">$8</h4>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!--TODAY CHOICE-->
+    <section class="today-choice">
+      <div>
+        <div class="chefs-choice">
+          <h3>Today Chef's Choice</h3>
+          <h4>Chicken salad with pomegranate</h4>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+            Distinctio
+          </p>
+          <a href="#">View more...</a>
+        </div>
+      </div>
+    </section>
+
+    <!-- CONTACT -->
+    <section class="contact">
+      <div>
+        <div class="contact-us">
+          <h2>Contact Us</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            Reiciendis laboriosam autem explicabo eum incidunt vel quaerat ab,
+            accusamus aspernatur dolor repellendus quisquam
+          </p>
+          <div class="address">
+            <div class="phone">
+              <i class="fa-solid fa-mobile-screen"></i>
+              <p>+123456789</p>
+            </div>
+            <div class="location">
+              <i class="fa-solid fa-location-dot"></i>
+              <p>Hudson 193, New York</p>
+            </div>
+            <div class="email">
+              <i class="fa-solid fa-envelope"></i>
+              <p>info@freya.com</p>
+            </div>
+          </div>
+        </div>
+        <div class="send-email">
+          <form action="" class="form-group">
+            <input type="text" placeholder="Enter Name" />
+            <input type="text" placeholder="Enter Email" />
+            <textarea rows="5" placeholder="Type your message"></textarea>
+            <input type="submit" value="Send message" />
+          </form>
+        </div>
+      </div>
+    </section>
+  </main>
+
+  <footer>
+    <div class="footer">
+      <div class="copy">
+        <p>&copy; Copyright 2023 - Freya</p>
+      </div>
+      <h3 class="title"><a href="index.html">Freya</a></h3>
+      <div class="social-media">
+        <i class="fa-brands fa-facebook-f"></i>
+        <i class="fa-brands fa-twitter"></i>
+        <i class="fa-brands fa-instagram"></i>
+        <i class="fa-brands fa-google-plus-g"></i>
+      </div>
+    </div>
+  </footer>
+  <div class="madeby">
+    <p>Made by <strong>@Marcel Sadio Mara</strong></p>
+  </div>
+
+  <!-- JS SCRIPT -->
+  <script src="script.js"></script>
+</body>
+
 </html>
